# simpledb

./: .gitignore  CMakeLists.txt  README.md  client.sh  commands.c  main.c  make_cert.sh  trie.c  trie.h
cmake/: FindValgrind.cmake
lib/: CMakeLists.txt  commands.c  commands.h  trie.c
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  commands_test.c
